# pl-match-predictor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
auxiliary/: clean.ipynb
data/elo/: Bournemouth.csv  Brentford.csv  Cardiff.csv  Crystal_Palace.csv  Everton.csv  Fulham.csv  Huddersfield.csv  Hull.csv  Ipswich.csv  Leeds.csv  Liverpool.csv  Luton.csv  Man_City.csv  Middlesbrough.csv  Nott'm_Forest.csv  Sheffield_United.csv  Southampton.csv  Stoke.csv  Sunderland.csv  Swansea.csv  West_Brom.csv
data/matches/: preprocessed_test.csv  preprocessed_train.csv
data/matches/raw/: 2021-22.csv
data_bak/elo/: Arsenal.csv  Aston_Villa.csv  Brighton.csv  Burnley.csv  Chelsea.csv  Leicester.csv  Man_United.csv  Newcastle.csv  Norwich.csv  Tottenham.csv  Watford.csv  West_Ham.csv  Wolves.csv
data_bak/matches/with_xg/: 2015-16.csv  2016-17.csv  2017-18.csv  2018-19.csv  2019-20.csv  2020-21.csv  2021-22.csv  2022-23.csv  2023-24.csv  2024-25.csv
data_bak/matches/with_xg_and_elo/: 2015-16.csv  2016-17.csv  2017-18.csv  2018-19.csv  2019-20.csv  2020-21.csv  (+4 more)
elo/: Arsenal.csv  Aston_Villa.csv  Bournemouth.csv  Brentford.csv  Brighton.csv  Burnley.csv  Chelsea.csv  Crystal_Palace.csv  Everton.csv  Fulham.csv  Hull.csv  Ipswich.csv  Leeds.csv  Leicester.csv  Liverpool.csv  Man_City.csv  Man_United.csv  Middlesbrough.csv  Newcastle.csv  Norwich.csv  Nott'm_Forest.csv  Sheffield_United.csv  Southampton.csv  Stoke.csv  Sunderland.csv  Swansea.csv  Tottenham.csv  Watford.csv  West_Brom.csv  West_Ham.csv  Wolves.csv
src/: dashboard.py  pipeline.py
src/data/: get_xg.py
src/models/: train.py
tests/: conftest.py
tests/integration/: test_pipeline.py
(+51 files in other folders)
