[project]
name = "pl-match-predictor"
version = "0.1.0"
description = "Premier League match outcome predictor."
authors = [
    {name = "MarwannAhmed",email = "133513976+MarwannAhmed@users.noreply.github.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "shap (>=0.51.0,<0.52.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "mlflow (>=3.11.1,<4.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]

[tool-poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.1.0,<8.0.0)"
]
